--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EdinhoMosquito",
+  "name": "stuart-bot",
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
@@ -9,7 +9,9 @@
   "author": "Filipe Braga",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.6.0",
     "discord.js": "^12.3.1",
+    "ffmpeg-static": "^4.4.0",
     "snekfetch": "^4.0.4"
   }
 }
