--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
+    "start": "node .",
+    "server": "./node_modules/.bin/netlify-lambda serve ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Filipe Braga",
