--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
     "discord.js": "^12.3.1",
+    "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "snekfetch": "^4.0.4"
   }
